fixing image stretch on iOS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,7 +109,6 @@ img {
 .inline-block {
     display: inline-block;
     width: 100%;
-    height: auto;
     display: flex;    
     flex-wrap: wrap;
     padding: 5px;
@@ -118,6 +117,7 @@ img {
 
 .inline-block img {
     min-width: 250px;
+    max-height: ;
     padding: 5px;
 }
 
